--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,20 @@
 {
-  "dependencies": {
+    "dependencies": {
+    "com.ptc.vuforia.engine": "file:com.ptc.vuforia.engine-11.4.4.tgz",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ext.nunit": "2.0.5",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.ide.rider": "3.0.38",
+    "com.unity.ide.visualstudio": "2.0.26",
     "com.unity.inputsystem": "1.17.0",
     "com.unity.learn.iet-framework": "4.0.4",
     "com.unity.mobile.android-logcat": "1.4.6",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.0.4",
+    "com.unity.test-framework": "1.6.0",
     "com.unity.timeline": "1.8.10",
+    "com.unity.ugui": "2.0.0",
     "com.unity.xr.arcore": "6.3.1",
     "com.unity.xr.arfoundation": "6.3.1",
     "com.unity.xr.arkit": "6.3.1",
